修复枚举类型在mysql中类型出错的问题

--- a/src/ThingsGateway.Web.Rcl.Core/Shared/Auth/Login.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Shared/Auth/Login.razor
@@ -19,7 +19,7 @@ else
             <MSheet Elevation=1 Style="width:100%; height:100%;" Class="d-flex align-start flex-column mb-6">
                 <div class="d-flex align-center ml-12 mt-12">
                     <MAvatar Size="40" Color="teal">
-                        <span class="white--text text-h6">@SYS_DEFAULT_TITLE.GetNameLen2()</span>
+                        <span class="white--text text-h6">@SYS_DEFAULT_TITLE?.GetNameLen2()</span>
                     </MAvatar>
                     <h1>@SYS_DEFAULT_TITLE</h1>
                 </div>
