--- a/src/ThingsGateway.Web.Rcl.Core/Components/DataTable/AppDataTable.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Components/DataTable/AppDataTable.razor
@@ -218,7 +218,7 @@
                             <MMenu OffsetY CloseOnClick=true Context="menu">
                                 <ActivatorContent>
                                     <MButton Small @attributes="@menu.Attrs" Text>
-                                        <MIcon>fas fa-ellipsis-v</MIcon>
+                                    <MIcon>mdi-dots-vertical</MIcon>
                                     </MButton>
                                 </ActivatorContent>
                                 <ChildContent>
