--- a/src/ThingsGateway.Web.Page/Page/Index.razor
+++ b/src/ThingsGateway.Web.Page/Page/Index.razor
@@ -44,7 +44,7 @@
                 </MCardSubtitle>
                 <MDivider></MDivider>
                 <MTimeline AlignTop Dense>
-                    @foreach (var item in RpcLogs)
+                    @foreach (var item in RpcLogs??new())
                     {
                         <MTimelineItem Color="primary"
                                Small>
@@ -86,7 +86,7 @@
                 </MCardSubtitle>
                 <MDivider></MDivider>
                 <MTimeline AlignTop Dense>
-                    @foreach (var item in RuntimeLogs)
+                    @foreach (var item in RuntimeLogs??new())
                     {
                         <MTimelineItem Color="primary"
                                Small>
@@ -117,7 +117,7 @@
             </MCardSubtitle>
             <MDivider></MDivider>
             <MTimeline AlignTop Dense>
-                @foreach (var item in DevLogVisits)
+                @foreach (var item in DevLogVisits??new())
                 {
                     <MTimelineItem Color="primary"
                                Small>
@@ -144,7 +144,7 @@
             </MCardSubtitle>
             <MDivider></MDivider>
             <MTimeline AlignTop Dense>
-                @foreach (var item in DevLogOps)
+                @foreach (var item in DevLogOps??new())
                 {
                     <MTimelineItem Color="primary"
                                Small>
