Razor文件格式化清理

--- a/src/ThingsGateway.Web.Rcl.Core/Components/DefaultList.razor
+++ b/src/ThingsGateway.Web.Rcl.Core/Components/DefaultList.razor
@@ -2,9 +2,8 @@
 @typeparam TItem where TItem : IDefaultItem<TItem>
 
 <MList Expand Dense
-       Nav 
-       Class="@ClassString" Style="@StyleString"
-       >
+       Nav
+       Class="@ClassString" Style="@StyleString">
     @foreach (var item in Items)
     {
         @*副标题*@
